<resources>
    <string name="app_name">Informatikwerkstatt - Phils Sensors</string>
    <string name="gyroskop">Gyroskop</string>
    <string name="beschleunigung">Beschleunigung</string>
    <string name="gps">GPS</string>
    <string name="sensoren">Sensoren</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="z">Z</string>
    <string name="nullnumber">0.0000</string>
    <string name="numberformat">{0,number, #.####}</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="altitude">Altitude</string>
    <string name="speed">Speed</string>
    <string name="distance">Distance</string>
</resources>
