<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/exist_gyroscope"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/gyroskop"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_gyroscop_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/x" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="20sp" />

            <TextView
                android:id="@+id/text_gyroscop_xvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullnumber" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="50sp" />

            <TextView
                android:id="@+id/text_gyroscop_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/y" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="20sp" />

            <TextView
                android:id="@+id/text_gyroscop_yvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullnumber" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="50sp" />

            <TextView
                android:id="@+id/text_gyroscop_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/z" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="20sp" />

            <TextView
                android:id="@+id/text_gyroscop_zvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullnumber" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/exist_accelerometer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/beschleunigung"
                android:textSize="24sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_accelerometer_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/x" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="20sp" />

            <TextView
                android:id="@+id/text_accelerometer_xvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nullnumber" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="50sp" />

            <TextView
                android:id="@+id/text_accelerometer_y"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/y" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="20sp" />

            <TextView
                android:id="@+id/text_accelerometer_yvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nullnumber" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="50sp" />

            <TextView
                android:id="@+id/text_accelerometer_z"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/z" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="20sp" />

            <TextView
                android:id="@+id/text_accelerometer_zvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nullnumber" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/exist_gps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:text="@string/gps"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_gps_latitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/latitude" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="20sp" />

            <TextView
                android:id="@+id/text_gps_latitudevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullnumber" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="50sp" />

            <TextView
                android:id="@+id/text_gps_longitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/longitude" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="20sp" />

            <TextView
                android:id="@+id/text_gps_longitudevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullnumber" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_gps_altitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/altitude" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="20sp" />

            <TextView
                android:id="@+id/text_gps_altitudevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullnumber" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="50sp" />

            <TextView
                android:id="@+id/text_gps_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/speed" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="20sp" />

            <TextView
                android:id="@+id/text_gps_speedvalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullnumber" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="50sp" />

            <TextView
                android:id="@+id/text_gps_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minWidth="20sp" />

            <TextView
                android:id="@+id/text_gps_distancevalue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nullnumber" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="50sp" />

        <TextView
            android:id="@+id/text_sensor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sensoren"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/sensors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>